Slight UI fix. Updated col-7 for breakpoint one and two to improve spacing between current location and forecast.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,7 +236,7 @@ a:active {
     .col-7 {
         width: 98%;
         padding-bottom: 15px;
-        padding-top: 15px;
+        padding-top: 5px;
     }
 
     .col-8 {
@@ -553,7 +553,7 @@ a:active {
     .col-7 {
         width: 98%;
         padding-bottom: 15px;
-        padding-top: 15px;
+        padding-top: 5px;
     }
 
     .col-8 {
